--- a/ui/html/formEnterMarks.html
+++ b/ui/html/formEnterMarks.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="ui/css/redmond/jquery-ui-1.8.13.custom.css" />
 		<script>
 			jQuery(document).ready(function($) {
-			$('#date').datepicker({dateFormat : 'dd-mm-yy'});
+			$('#date').datepicker();
 			})
 		</script>
 		<style type="text/css">
