result module updated

--- a/ui/html/formGetResult.html
+++ b/ui/html/formGetResult.html
@@ -15,7 +15,7 @@
 		</style>
 	</head>
 	<body>
-		<form action="DisplayResult.php" method="POST">
+		<form action="././core/DisplayResult.php" method="POST">
 			<p class="form-label">Roll No<br />
 			<input type="text" name="rollno" /></p>
 			
