--- a/ui/html/formEnterMarks.html
+++ b/ui/html/formEnterMarks.html
@@ -15,7 +15,7 @@
 		</style>
 	</head>
 	<body>
-		<form action="/schoolstreet/core/EnterMarks.php" method="POST">
+		<form action="././core/EnterMarks.php" method="POST">
 			<p class="form-label">Exam Name<br />
 			<select name="examname">
 				<option>Mid Term Exam</option>
